# modem-interface

./: .env.example  .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  LICENSES-THIRD-PARTY.md  README.md
backend/: Cargo.toml
backend/src/: main.rs  state.rs  tls_cert.rs
backend/src/api/: auth_middleware.rs  csrf_middleware.rs  embedded_assets.rs  error.rs  heartbeat.rs  mod.rs  rate_limit_middleware.rs  routing.rs  steering.rs  telemetry.rs  timeout.rs  tunnel.rs  websocket.rs
backend/src/api/routes/: auth.rs  config.rs  license.rs  mod.rs  modem.rs  modem_profiles.rs  network.rs  profile.rs  sim.rs  speedtest.rs  steering.rs  system.rs  users.rs  wan.rs
backend/src/cli/: env_cmd.rs  mod.rs
backend/src/config/: apn_profiles.rs  auth.rs  env.rs  mod.rs  portal.rs  sim_slots.rs  wan.rs  wedge_reboot.rs
backend/src/hardware/: fingerprint.rs  mock.rs  mod.rs  profiles.rs  speedtest.rs  traits.rs  types.rs  usbnet.rs
backend/src/security/: at_whitelist.rs  audit.rs  device_auth.rs  license.rs  login_lockout.rs  mod.rs  rate_limit.rs  sessions.rs  shadow.rs  signing-staging.pub  signing.pub  users.rs  ws_tokens.rs
docs/: API-CONTRACT.md  HARDWARE-TRAIT.md  VERSIONING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: browserconfig.xml  site.webmanifest
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  config.ts  index.ts  license.ts  modem.ts  profile.ts  profiles.ts  sim.ts  speedtest.ts  steering.ts  system.ts  telemetry.ts  tunnel.ts  users.ts  wan.ts
frontend/src/components/admin/: UserManagement.tsx
frontend/src/components/auth/: ChangePasswordDialog.tsx  LoginPage.tsx  SetupPage.tsx
frontend/src/components/layout/: PanelGrid.tsx  Sidebar.tsx  index.ts
frontend/src/components/modem/: ActiveModemLabel.tsx  AntennaMetrics.tsx  BandLockPanel.tsx  CarrierAggregationSection.tsx  ConnectionInfo.tsx  ConnectionPanel.tsx  ConnectionStatus.tsx  DebugPanel.tsx  DeviceInfo.tsx  GpsPanel.tsx  ProfileRequestDialog.tsx  SignalMeter.tsx  SignalTrendChart.tsx  SignalTrending.tsx  SpeedChart.tsx  SpeedtestPanel.tsx  SpeedtestResults.tsx  WanManagerPanel.tsx  index.ts
frontend/src/components/modem/apn/: AdvancedFields.tsx  ApnEditor.tsx  ApnFormFields.tsx  ConfirmBanner.tsx  MbnSelector.tsx  PdpContextList.tsx  ProfileManagerDialog.tsx  (+2 more)
frontend/src/components/settings/: LicenseSettings.tsx  TelemetryPolling.tsx  TelemetryToggle.tsx  TunnelConfig.tsx
frontend/src/components/sim/: SimCard.tsx  index.ts
frontend/src/components/system/: UpdatePanel.tsx
frontend/src/components/terminal/: ATTerminal.tsx  WhitelistManager.tsx  index.ts
frontend/src/components/ui/: AgcccLogo.tsx  IconPicker.tsx  ModemSubtext.tsx  ThemeSwitcher.tsx  UserProfileButton.tsx  ViewPresetBar.tsx
frontend/src/components/wan/: SteeringRuleCard.tsx  SteeringRuleModal.tsx  TrafficSteeringPanel.tsx
frontend/src/contexts/: UserContext.ts
frontend/src/hooks/: index.ts  useAuth.ts  usePageVisibility.ts  usePresetSync.ts  useTheme.ts  useWebSocket.ts
frontend/src/hooks/mutations/: index.ts  useATCommand.ts  useApnApply.ts  useApnProfiles.ts  useApplyUpdate.ts  useBandConfig.ts  useConnection.ts  useMbnConfig.ts  useNetworkScan.ts  usePinOperation.ts  useSimSlots.ts  useSteeringRules.ts  useUpdateConfig.ts  useWanConfig.ts
frontend/src/hooks/queries/: index.ts  useActiveModemId.ts  useAntennaMetrics.ts  useApnProfiles.ts  useBandConfig.ts  useConfig.ts  useDeviceInfo.ts  useExtendedSignal.ts  useGps.ts  useModemDetection.ts  useModemProfiles.ts  useModemStatus.ts  usePdpDetails.ts  useSignal.ts  useSignalHistory.ts  useSimSlots.ts  useSimStatus.ts  useSpeedtest.ts  useSteeringRules.ts  useSystemUpdate.ts  useWanStatus.ts
frontend/src/lib/: signal-utils.ts
frontend/src/pages/: WanManagerPage.tsx
frontend/src/stores/: uiStore.ts
frontend/src/styles/: index.css
frontend/src/types/: api.ts  presets.ts  profiles.ts  steering.ts
openwrt/: Makefile  README.md
openwrt/files/etc/config/: modem-interface
openwrt/files/etc/cron.d/: modem-interface-update
openwrt/files/etc/init.d/: modem-interface  modem-interface-debug
openwrt/files/etc/modem-interface/: config.toml
openwrt/keys/: modem-interface-feed.pub
openwrt/package-info/: conffiles  control
scripts/: assert-binary-size.sh  build-apk.sh  build-backend-mipsel.sh  build-backend.ps1  build-frontend.ps1  build-ipk.ps1  build-ipk.sh  build-openwrt-package.ps1  check-no-aws-lc.sh  public-manifest.txt  publish-public.sh  test-assert-binary-size.sh  test-publish-public.sh  test-version-translate.sh  version-translate.sh
(+4 files in other folders)
